--- a/help.html
+++ b/help.html
@@ -154,6 +154,10 @@
 </ul>
 <p>You can read about advanced configuration options for the PortableApps.com Launcher in its <a href="Other/Source/Readme.txt">readme file</a>.</p>
 <strong>Release Notes:</strong>
+<ul><em>7.5.6 Development Test 2 (2018-08-10):</em></ul>
+	<ul><li>Fixed Homepage link in appinfo.ini.</li>
+	<li>Changed from "AppName Team" to "Tor Project Team" in appinfo.ini.</li>
+</ul>
 <ul><em>7.5.6 Development Test 1 (2018-08-09): Initial Release</em></ul>
 	<ul><li>Compiled app to match PortableApps 3.5 Format.</li>
 </ul>
