--- a/help.html
+++ b/help.html
@@ -154,6 +154,9 @@
 </ul>
 <p>You can read about advanced configuration options for the PortableApps.com Launcher in its <a href="Other/Source/Readme.txt">readme file</a>.</p>
 <strong>Release Notes:</strong>
+<ul><em>8.5.3 Development Test 5 (2019-07-01):</em></ul>
+    <ul><li>Updated base app.</li>
+</ul>
 <ul><em>8.0.5 Development Test 5 (2019-02-09):</em></ul>
     <ul><li>Updated base app.</li>
 	<li>Cleaned up ini files.</li>
